# elaborate

./: .gitignore  CMakeLists.txt
elb/numeric/: CMakeLists.txt  float8.cpp  float8.hpp
tests/: main.cpp
